Spacing fixes.

--- a/Styles/load.css
+++ b/Styles/load.css
@@ -10,7 +10,6 @@
     align-items: center;
     background: rgba(23, 23, 23, 1);
     z-index: 999;
-    border: 2px solid black;
   }
   
   #loading-bar-container {
